--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
   <button onclick="uploadPDF()">Convert</button>
   <p id="status"></p>
   <script src="script.js"></script>
+  <form action="https://pdf2img-backend-5.onrender.com/upload" method="POST" enctype="multipart/form-data">
+  <input type="file" name="file" required />
+  <button type="submit">Convert to Image</button>
+</form>
+
 </body>
 </html>
