--- a/index.html
+++ b/index.html
@@ -1,60 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDF to Image Converter</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>PDF to Image Converter</h1>
-
-  <input type="file" id="pdfInput" />
+  <input type="file" id="pdfInput">
   <button onclick="uploadPDF()">Convert</button>
-
   <p id="status"></p>
+  <script src="script.js"></script>
+  <form action="https://pdf2img-backend-5.onrender.com/upload" method="POST" enctype="multipart/form-data">
+  <input type="file" name="file" required />
+  <button type="submit">Convert to Image</button>
+</form>
 
-  <script>
-    async function uploadPDF() {
-      const input = document.getElementById('pdfInput');
-      const status = document.getElementById('status');
-
-      if (!input.files.length) {
-        status.textContent = "Please select a PDF file.";
-        return;
-      }
-
-      const formData = new FormData();
-      formData.append('file', input.files[0]);
-
-      status.textContent = "Uploading and converting...";
-
-      try {
-        const response = await fetch('https://pdf2img-backend-5.onrender.com/upload', {
-          method: 'POST',
-          body: formData
-        });
-
-        if (!response.ok) {
-          throw new Error("Upload failed");
-        }
-
-        const blob = await response.blob();
-        const url = window.URL.createObjectURL(blob);
-        const a = document.createElement('a');
-        a.href = url;
-        a.download = 'images.zip';
-        document.body.appendChild(a);
-        a.click();
-        a.remove();
-        window.URL.revokeObjectURL(url);
-
-        status.textContent = "Download started!";
-      } catch (err) {
-        status.textContent = "Error uploading file.";
-        console.error(err);
-      }
-    }
-  </script>
 </body>
 </html>
