--- a/index.html
+++ b/index.html
@@ -1,19 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PDF to Image Converter</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>PDF to Image Converter</h1>
-    <p id="status"></p>
-  <script src="script.js"></script>
-  <form action="https://pdf2img-backend-5.onrender.com/upload" method="POST" enctype="multipart/form-data">
-  <input type="file" name="file" required />
-  <button type="submit">Convert to Image</button>
-</form>
+  <div class="container">
+    <h1>PDF to Image Converter</h1>
+    <p class="subheading">Convert your PDFs into high-quality images in seconds.</p>
 
+    <div class="upload-box" id="dropArea">
+      <input type="file" id="pdfInput" accept=".pdf" />
+      <p>Click or drag your PDF file here</p>
+    </div>
+
+    <button onclick="uploadPDF()">Convert to Images</button>
+    <p id="status"></p>
+  </div>
+
+  <script>
+    const dropArea = document.getElementById("dropArea");
+    const pdfInput = document.getElementById("pdfInput");
+
+    // Drag and drop behavior
+    dropArea.addEventListener("dragover", (e) => {
+      e.preventDefault();
+      dropArea.classList.add("dragover");
+    });
+
+    dropArea.addEventListener("dragleave", () => {
+      dropArea.classList.remove("dragover");
+    });
+
+    dropArea.addEventListener("drop", (e) => {
+      e.preventDefault();
+      dropArea.classList.remove("dragover");
+      const files = e.dataTransfer.files;
+      if (files.length > 0) {
+        pdfInput.files = files;
+      }
+    });
+
+    async function uploadPDF() {
+      const file = pdfInput.files[0];
+      const status = document.getElementById('status');
+
+      if (!file) {
+        status.textContent = "Please select a PDF file.";
+        return;
+      }
+
+      const formData = new FormData();
+      formData.append('file', file);
+
+      status.textContent = "Uploading and converting...";
+
+      try {
+        const response = await fetch('https://pdf2img-backend-5.onrender.com/upload', {
+          method: 'POST',
+          body: formData
+        });
+
+        if (!response.ok) {
+          throw new Error("Upload failed");
+        }
+
+        const blob = await response.blob();
+        const url = window.URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = 'images.zip';
+        document.body.appendChild(a);
+        a.click();
+        a.remove();
+        window.URL.revokeObjectURL(url);
+
+        status.textContent = "Download started!";
+      } catch (err) {
+        status.textContent = "Error uploading file.";
+        console.error(err);
+      }
+    }
+  </script>
 </body>
 </html>
